--- a/README
+++ b/README
@@ -21,7 +21,7 @@ Usage :
 3) Stand by ... some (probably) long time. 
 
 4) When cornac says 'Done' : 
- a) go in your destination directory, HTML version will be there, staring with index.html
+ a) go in your destination directory, HTML version will be there, starting with index.html
  b) link (ln -s) you web root to the 'web' directory in cornac, and then,
     point your browser to the good path (http://localhost/web) : 
     All should be there
@@ -29,7 +29,7 @@ Usage :
  
  
 May be of interest :
-+ scripts/tags.php : a way to tags comments in the code
++ scripts/tag/tags.php : a way to tags comments in the code
 + scripts/file2png.php : a way to represent file system as PNG file
 
 Current version is DEV. 
