--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Cornac : PHP Code Analyzer
 
-Copyright 2010 Matthew Burton, http://matthewburton.org
-Code by Burton and Joshua Knowles, http://auscillate.com 
+Copyright (c) 2010 - 2011 Alter Way Solutions (France)
+Code by Damien Seguy (damien.seguy@gmail.com)
 
 This software is part of the Open Source Cornac Project. 
 
