fixing evolution to bin

--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 Add SPIP 2.1.x, ezpublish 4.4.
+Extract xdebug functions to external class to avoid dependency
+move classes from tests to library
+move test classes in own directory
+
 
 [cornac]
 add remove table option for cornac / auditeur
