--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Cornac : PHP Code Analyzer
 
 Copyright (c) 2010 - 2011 Alter Way Solutions (France)
-Code by Damien Seguy (damien.seguy@gmail.com)
+Code by Damien Seguy (dams@php.net)
 
 This software is part of the Open Source Cornac Project. 
 
@@ -16,7 +16,7 @@ Usage :
    Check the first section, that should be enough. 
 
 2) at the root of cornac folder, run this command : 
-bin/cornac -I [application]
+bin/cornac -I <ini>
 
 3) Stand by ... some time. 
 
